# agronomist

./: .agronomist.yaml  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Makefile  NEXT_STEPS.md  README.md  action.yml  codecov.yml  index.html  mkdocs.yml  pyproject.toml  search.json  sitemap.xml
.github/: dependabot.yml
.github/agents/: python-conventions.agent.md
.github/workflows/: codeql.yml  docs.yml  gitleaks.yml  quality.yml  release.yml  test-workflows.yml
api/: index.html
architecture/: index.html
cli/: index.html
configuration/: index.html
development/: index.html
docs/: api.md  architecture.md  cli.md  configuration.md  design.md  development.md  getting-started.md  github-action.md  gitlab-ci.md  index.md  reports.md  resolvers.md  testing.md  troubleshooting.md
docs/stylesheets/: extra.css
examples/workflows/: .gitlab-ci.yml  agronomist-ci.yml  agronomist.yml
getting-started/: index.html
github-action/: index.html
gitlab-ci/: index.html
reports/: index.html
resolvers/: index.html
search/: search_index.json
src/agronomist/: __init__.py  cli.py  config.py  exceptions.py  fileutil.py  git.py  github.py  gitlab.py  http.py  markdown.py  models.py  report.py  scanner.py  updater.py
test/: README.md  TESTING_GUIDE.md  run_tests.sh
test/fixtures/: report_empty.json  report_multiple_modules.json  report_single_module.json
test/integration/: test_multi_pr_flow.sh
test/unit/: test_file_based_updates.bats  test_multi_pr.bats
test/unit/python/: __init__.py  conftest.py  test_benchmarks.py  test_cli_basic.py  test_cli_main.py  test_config.py  test_exceptions.py  test_fileutil.py  test_git.py  test_github.py  test_gitlab.py  test_http.py  test_integration.py  test_markdown.py  test_models.py  test_report.py  test_scanner.py  test_scanner_edge.py  test_updater.py
testing/: index.html
troubleshooting/: index.html
